Connected the Chat to backend: updated chat API, DB Model, logic for message and conversation page
